# template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: main.yml
project_name/: celery.py  celery_app.py  urls.py  wsgi.py
project_name/settings/: base.py  local.py  production.py  test.py
project_name/templates/: base.html
project_name/templates/defender/: lockout.html
project_name/tests/: test_dummy.py
